--- a/example.css
+++ b/example.css
@@ -52,7 +52,7 @@ em {
   height: 480px;
   width: 94%;
   padding: 10px;
-  border: 5px solid #424547;
+  border: 5px solid #484a4c;
   margin-bottom: 5px;
   text-align: left;
 }
